--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <!-- Components -->
     <string name="search_bar_label">Search…</string>
     <string name="movie_poster_content_description">Movie poster</string>
+    <string name="movie_poster_loading_error_content_description">Movie poster loading error</string>
+    <string name="movie_poster_loading_error_text">Something went wrong!</string>
     <string name="back_button_content_description">Go back</string>
     <string name="user_score_user_text">User</string>
     <string name="user_score_score_text">Score</string>
