feat: change loading error content description

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,6 @@
 
     <!-- Errors -->
     <string name="loading_error_text">Something went wrong!</string>
-    <string name="loading_error_content_description">Movie poster loading error</string>
+    <string name="loading_error_content_description">Loading error</string>
 
 </resources>
